--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-helmet": "^6.1.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
+    "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.21.1"
   },
   "devDependencies": {
